compiler/testData/diagnostics/tests/multiplatform/topLevelFun/headerWithoutImpl.fir.kt
// MODULE: m1-common
// FILE: common.kt

<!NO_ACTUAL_FOR_EXPECT{JVM}!>expect fun foo()<!>
